# webservices-dispatch-action

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile_README.md  LICENSE  README.md  action.yml  entrypoint  environment.yml  pixi.toml  pkg_versions.json  pyproject.toml  rerender.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-push.yml  keep-alive.yml  tests.yml
tests/: run_live_rerender_test.py  run_live_test.py  run_live_version_update_test.py
tests/scripts/: send_event.py
webservices_dispatch_action/: __main__.py  api_sessions.py  env_management.py  rerendering.py  utils.py  version_updater.py
